# ot-micro-ros-project

./: .gitignore  README.md
config/: freertos.config  microros.config
docs/: architecture.md  setup_guide.md
renode_scripts/: actuator_node_final.resc  common_setup.resc  sensor_node_fixed.resc
scripts/: build_firmware.sh  setup.sh  verify_project.sh  verify_structure.sh
src/actuator_node/: CMakeLists.txt  actuator_node.c
src/common/: microros_config.c  microros_config.h
src/sensor_node/: CMakeLists.txt  sensor_node.c
